--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -5,7 +5,7 @@
         %span(class="icon-bar" )
         %span(class="icon-bar" )
         %span(class="icon-bar" )
-      %a(class="navbar-brand kht-logo" href="/customer_management/update/show_user_infos" ) FinanceStart
+      %a(class="navbar-brand kht-logo" href="/" ) 财务星
     %div(class="navbar-collapse collapse" )
       %ul(class="nav navbar-nav")
         %li
