--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -11,7 +11,7 @@
         %li
           %a(href="javascript:{window.location.href = '#'}" ) 首页
         %li
-          %a(href="javascript:{window.location.href = '#'}" ) 用户管理 （admin）
+          %a(href="javascript:{window.location.href = '#'}" ) 用户管理
         %li
           %a(href="javascript:{window.location.href = '#" ) 财务管理
         %li
@@ -36,4 +36,4 @@
               %a(href="#" )某某链接
             %li.divider
             %li
-              %a(href="javascript:{window.location.href = '#'}" ) 退出
+              %a(href="javascript:{window.location.href = '/signout'}" ) 退出
