send a email to register user

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -5,35 +5,36 @@
         %span(class="icon-bar" )
         %span(class="icon-bar" )
         %span(class="icon-bar" )
-      %a(class="navbar-brand kht-logo" href="/" ) 财务星
-    %div(class="navbar-collapse collapse" )
-      %ul(class="nav navbar-nav")
-        %li
-          %a(href="javascript:{window.location.href = '#'}" ) 首页
-        %li
-          %a(href="javascript:{window.location.href = '#'}" ) 用户管理
-        %li
-          %a(href="javascript:{window.location.href = '#" ) 财务管理
-        %li
-          %a(href="javascript:{window.location.href = '#'}" )统计信息
-        %li
-          %a(href="javascript:{window.location.href = '#'}" ) Wap系统
+      %a(class="navbar-brand cwx-logo" href="/" ) 财务星
+    -if signed_in?
+      %div(class="navbar-collapse collapse" )
+        %ul(class="nav navbar-nav")
+          %li
+            %a(href="javascript:{window.location.href = '#'}" ) 首页
+          %li
+            %a(href="javascript:{window.location.href = '#'}" ) 用户管理
+          %li
+            %a(href="javascript:{window.location.href = '#" ) 财务管理
+          %li
+            %a(href="javascript:{window.location.href = '#'}" )统计信息
+          %li
+            %a(href="javascript:{window.location.href = '#'}" ) Wap系统
 
-      %ul(class="nav navbar-nav navbar-right" )
-        %li(class="dropdown" )
-          %a(class="dropdown-toggle" data-toggle="dropdown" href="#" )
-            %span
-              你好，某某某
-            %b(class="caret")
-          %ul(class="dropdown-menu" )
-            %li
-              %a(href="javascript:{window.location.href = '#'}" )某某链接
-            %li.divider
-            %li
-              %a(href="#")某某链接
-            %li.divider
-            %li
-              %a(href="#" )某某链接
-            %li.divider
-            %li
-              %a(href="javascript:{window.location.href = '/signout'}" ) 退出
+        %ul(class="nav navbar-nav navbar-right" )
+          %li(class="dropdown" )
+            %a(class="dropdown-toggle" data-toggle="dropdown" href="#" )
+              %span
+                你好，#{current_user.name}
+              %b(class="caret")
+            %ul(class="dropdown-menu" )
+              %li
+                %a(href="javascript:{window.location.href = '#'}" )某某链接
+              %li.divider
+              %li
+                %a(href="#")某某链接
+              %li.divider
+              %li
+                %a(href="#" )某某链接
+              %li.divider
+              %li
+                %a(href="javascript:{window.location.href = '/signout'}" ) 退出
