--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,5 @@
-.kht-logo {
-	background: url(../images/kehutong_new_logo.png) no-repeat left center;
+.cwx-logo {
+	background: url(../images/cwx_logo.png) no-repeat left center;
 	width: 98px;
 	height: 50px;
 	text-indent: -9999px;
