--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,5 @@
 .cwx-logo {
-	background: url(../images/cwx_logo.png) no-repeat left center;
+	background: url(cwx_logo.png) no-repeat left center;
 	width: 98px;
 	height: 50px;
 	text-indent: -9999px;
