--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -28,13 +28,13 @@
               %b(class="caret")
             %ul(class="dropdown-menu" )
               %li
-                %a(href="javascript:{window.location.href = '#'}" )某某链接
+                %a(href="javascript:{window.location.href = '#'}" )用户认证
               %li.divider
               %li
-                %a(href="#")某某链接
+                %a(href="#")个人信息
               %li.divider
               %li
-                %a(href="#" )某某链接
+                %a(href="#" )密码修改
               %li.divider
               %li
                 %a(href="javascript:{window.location.href = '/signout'}" ) 退出
