--- a/app/views/mailer_service/welcome_email.text.haml
+++ b/app/views/mailer_service/welcome_email.text.haml
@@ -2,7 +2,8 @@ Welcome to example.com, #{@user.name}
 ===============================================
 
 You have successfully signed up to example.com,
-your login email is: #{@user.email}.
+your login email is: #{@user.email},
+your verify code is: #{@verify_code}.
 
 To login to the site, just follow this link: #{@url}.
 
