--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -10,11 +10,11 @@
       %div(class="navbar-collapse collapse" )
         %ul(class="nav navbar-nav")
           %li
-            %a(href="javascript:{window.location.href = '#'}" ) 首页
+            %a(href="javascript:{window.location.href = '/finance_management/index'}" ) 首页
           %li
-            %a(href="javascript:{window.location.href = '#'}" ) 用户管理
+            %a(href="javascript:{window.location.href = '/finance_management/customer_management/index'}" ) 用户管理
           %li
-            %a(href="javascript:{window.location.href = '#" ) 财务管理
+            %a(href="javascript:{window.location.href = '/finance_management/my_finance/index'}") 财务管理
           %li
             %a(href="javascript:{window.location.href = '#'}" )统计信息
           %li
