--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -22,298 +22,474 @@
 }
 
 .btn {
-	position: relative;
+    position: relative;
+}
+
+.btn-default-alt {
+    color: #428BCA;
 }
 
 .break20 {
-	margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .break10 {
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .input-group {
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .nav-sidebar {
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .panel-primary > .panel-heading > h4 > small {
-	color: #fff;
-}
-
-.wx-row {
+    color: #fff;
 }
 
 .wx-example {
-	position: relative;
-	margin-bottom: 10px;
+    position: relative;
+    margin-bottom: 10px;
 }
 
 .wx-edit {
-	position: absolute;
-	right: 0px;
-	top: 0;
+    position: absolute;
+    right: 0px;
+    top: 0;
 }
 
 .wx-edit .btn {
-	border-radius: 0px;
-	border-bottom-left-radius: 5px;
-	border-top-right-radius: 10px;
+    border-radius: 0px;
+    border-bottom-left-radius: 5px;
+    border-top-right-radius: 10px;
 }
 
 .wx-avatar {
-	width: 48px;
-	height: 48px;
-	background-color: #eee;
-	box-shadow: 0px 0px 1px 0px rgba(0,0,0, .6), inset 0px 1px 1px 0px #fff;
-	position: absolute;
+    width: 48px;
+    height: 48px;
+    background-color: #eee;
+    box-shadow: 0px 0px 1px 0px rgba(0,0,0, .6), inset 0px 1px 1px 0px #fff;
+    position: absolute;
 }
 
 .wx-bubble {
-	position: relative;
-	max-width: 80%;
-	min-height: 50px;
-	font-size: 16px;
-	padding: 15px;
-	border-radius: 10px;
+    position: relative;
+    max-width: 80%;
+    min-height: 50px;
+    font-size: 16px;
+    padding: 15px;
+    border-radius: 10px;
 }
 
 .wx-bubble:after {
-	content: "";
-	position: absolute;
-	top: 15px;
-	border-style: solid;
-	display: block;
-	width: 0;
-	z-index: 1;
+    content: "";
+    position: absolute;
+    top: 15px;
+    border-style: solid;
+    display: block;
+    width: 0;
+    z-index: 1;
 }
 
 .wx-received .wx-bubble {
-	background-image:-webkit-gradient(linear, 0 0, 0 100%, color-stop(0, #b3fb57), color-stop(0.3, #9be73a), color-stop(1, #96d83a));
-	box-shadow: 0px 0px 1px 0px rgba(0,0,0, .8), inset 0px 1px 1px 0px #d0ff94;
-	margin-left: 65px;
-	padding-right: 60px;
+    background-image:-webkit-gradient(linear, 0 0, 0 100%, color-stop(0, #b3fb57), color-stop(0.3, #9be73a), color-stop(1, #96d83a));
+    box-shadow: 0px 0px 1px 0px rgba(0,0,0, .8), inset 0px 1px 1px 0px #d0ff94;
+    margin-left: 65px;
+    padding-right: 60px;
 }
 
 .wx-received .wx-avatar {
-	left: 0;
+    left: 0;
 }
 
 .wx-sent .wx-bubble {
-	background-image:-webkit-gradient(linear, 0 0, 0 100%, color-stop(0, #e7e7e7), color-stop(1, #d4d4d4));
-	box-shadow: 0px 0px 1px 0px rgba(0,0,0, .9), inset 0px 1px 1px 0px #fff;
-	margin-right: 65px;
-	float: right;
+    background-image:-webkit-gradient(linear, 0 0, 0 100%, color-stop(0, #e7e7e7), color-stop(1, #d4d4d4));
+    box-shadow: 0px 0px 1px 0px rgba(0,0,0, .9), inset 0px 1px 1px 0px #fff;
+    margin-right: 65px;
+    float: right;
 }
 
 .wx-sent .wx-avatar {
-	right: 0;
+    right: 0;
 }
 
 
 .wx-received .wx-bubble:after {
-	left: -9px;
-	border-width: 10px 10px 10px 0;
-	border-color: transparent #a9f34b;
+    left: -9px;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent #a9f34b;
 }
 
 .wx-sent .wx-bubble:after {
-	right: -9px;
-	border-width: 10px 0 10px 10px;
-	border-color: transparent #dedede;
+    right: -9px;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent #dedede;
 }
 
 .branch {
-	margin-bottom: 20px;
-	margin-top: 10px;
-	margin-left: 40%;
-	margin-right: 5%;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-left: 40%;
+    margin-right: 5%;
 }
 
 .branch-top {
-	border-right: 5px solid #428bca;
-	height: 20px;
+    border-right: 5px solid #428bca;
+    height: 20px;
 }
 
 .branch-bottom {
-	border: 5px solid #428bca;
-	border-bottom: none;
-	height: 25px;
+    border: 5px solid #428bca;
+    border-bottom: none;
+    height: 25px;
 }
 
 .nav-sidebar > li.active > a:after {
-	content: "";
-	position: absolute;
-	right:0px;
-	top: 0;
-	width: 0px;
-	height: 0px;
-	border: 20px solid #fff;
-	border-right: 0px solid #fff;
-	border-left: 20px solid #428bca;
+    content: "";
+    position: absolute;
+    right:0px;
+    top: 0;
+    width: 0px;
+    height: 0px;
+    border: 20px solid #fff;
+    border-right: 0px solid #fff;
+    border-left: 20px solid #428bca;
 }
 
 .list-group-arrow .list-group-item {
-	padding-right: 35px;
+    padding-right: 35px;
 }
 
 .list-group-arrow .list-group-item:after {
-	font-family: 'icomoon';
-	content: "\f105";
-	font-size: 30px;
-	line-height: 1em;
-	font-weight: normal;
-	color: #ccc;
-	position: absolute;
-	right: 10px;
-	top: 50%;
-	margin-top: -15px;
+    font-family: 'icomoon';
+    content: "\f105";
+    font-size: 30px;
+    line-height: 1em;
+    font-weight: normal;
+    color: #ccc;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    margin-top: -15px;
 }
 
 .modal-dialog {
-	width: 70%;
+    width: 70%;
 }
 
 .demo-pointer {
-	font-family: icomoon;
-	font-weight: normal;
-	font-style: normal;
-	display: block;
-	width: 38px;
-	height: 38px;
-	line-height: 38px;
-	border-radius: 50px;
-	text-align: center;
-	position: absolute;
-	z-index: 888;
-	font-size: 28px;
-	color: #ff9326;
-	-webkit-transition: all 0.5s ease;
+    font-family: icomoon;
+    font-weight: normal;
+    font-style: normal;
+    display: block;
+    width: 38px;
+    height: 38px;
+    line-height: 38px;
+    border-radius: 50px;
+    text-align: center;
+    position: absolute;
+    z-index: 888;
+    font-size: 28px;
+    color: #ff9326;
+    -webkit-transition: all 0.5s ease;
 }
 
 .demo-pointer:after {
-	display: block;
-	position: absolute;
-	width: 38px;
-	height: 38px;
-	line-height: 38px;
+    display: block;
+    position: absolute;
+    width: 38px;
+    height: 38px;
+    line-height: 38px;
 }
 
 @-webkit-keyframes bounce-vertical {
-	from { top:-2px; } to { top:2px; }
+    from { top:-2px; } to { top:2px; }
 }
 
 @-webkit-keyframes bounce-horizontal {
-	from { left:-2px; } to { left:2px; }
+    from { left:-2px; } to { left:2px; }
 }
 
 .pointer-up {
-	left: 50%;
-	margin-left: -20px;
-	bottom: -45px;
+    left: 50%;
+    margin-left: -20px;
+    bottom: -45px;
 }
 
 .pointer-up:after {
-	content: "\f062";
-	-webkit-animation: bounce-vertical .4s linear infinite alternate;
+    content: "\f062";
+    -webkit-animation: bounce-vertical .4s linear infinite alternate;
 }
 
 .pointer-down {
-	left: 50%;
-	margin-left: -20px;
-	top: -45px;
+    left: 50%;
+    margin-left: -20px;
+    top: -45px;
 }
 
 .pointer-down:after {
-	content: "\f063";
-	-webkit-animation: bounce-vertical .5s linear infinite alternate;
+    content: "\f063";
+    -webkit-animation: bounce-vertical .5s linear infinite alternate;
 }
 
 .pointer-right, .pointer-right-up {
-	top: 50%;
-	margin-top: -20px;
-	left: -45px;
+    top: 50%;
+    margin-top: -20px;
+    left: -45px;
 }
 
 .pointer-right:after, .pointer-right-up:after {
-	content: "\f061";
-	-webkit-animation: bounce-horizontal .4s linear infinite alternate;
+    content: "\f061";
+    -webkit-animation: bounce-horizontal .4s linear infinite alternate;
 }
 
 .pointer-left {
-	top: 50%;
-	margin-top: -20px;
-	right: -45px;
+    top: 50%;
+    margin-top: -20px;
+    right: -45px;
 }
 
 .pointer-left:after {
-	content: "\f060";
-	-webkit-animation: bounce-horizontal .4s linear infinite alternate;
+    content: "\f060";
+    -webkit-animation: bounce-horizontal .4s linear infinite alternate;
 }
 
 .pointer-gone {
-	left:-9999px;
+    left:-9999px;
 }
 
 .pointer-content {
-	display: block;
-	position: absolute;
-	z-index: 887;
-	color: #555;
-	width: 190px;
-	padding:10px 10px 10px 30px;
-	line-height: 24px;
-	border-radius: 5px;
-	font-size: 20px;
-	line-height: 1.4em;
-	font-weight: normal;
-	text-align: left;
-	white-space: normal;
-	-webkit-animation: none;
+    display: block;
+    position: absolute;
+    z-index: 887;
+    color: #555;
+    width: 190px;
+    padding:10px 10px 10px 30px;
+    line-height: 24px;
+    border-radius: 5px;
+    font-size: 20px;
+    line-height: 1.4em;
+    font-weight: normal;
+    text-align: left;
+    white-space: normal;
+    -webkit-animation: none;
 }
 
 .demo-pointer, .pointer-content {
-	background-color: rgba(255,255,255, .8);
-	box-shadow: 0px 1px 3px 0px rgba(0,0,0, .5);
+    background-color: rgba(255,255,255, .8);
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0, .5);
 }
 
 .pointer-right .pointer-content {
-	top: 0px;
-	right: 45px;
+    top: 0px;
+    right: 45px;
 }
 
 .pointer-right-up .pointer-content {
-	bottom: 0px;
-	right: 45px;
+    bottom: 0px;
+    right: 45px;
 }
 
 .pointer-left .pointer-content {
-	top: 0px;
-	left: 45px;
+    top: 0px;
+    left: 45px;
 }
 
 .pointer-up .pointer-content {
-	left: -75px;
-	top: 45px;
+    left: -75px;
+    top: 45px;
 }
 
 .pointer-down .pointer-content {
-	left: -75px;
-	bottom: 45px;
+    left: -75px;
+    bottom: 45px;
 }
 
 .pointer-content:before {
-	font-family: icomoon;
-	font-weight: normal;
-	font-style: normal;
-	content: "\f0eb";
-	color: #ff9326;
-	font-size: 20px;
-	display: block;
-	position: absolute;
-	left: 10px;
+    font-family: icomoon;
+    font-weight: normal;
+    font-style: normal;
+    content: "\f0eb";
+    color: #ff9326;
+    font-size: 20px;
+    display: block;
+    position: absolute;
+    left: 10px;
+}
+
+.filter-dl {
+    margin: 10px 0;
+}
+
+.filter-dl dt {
+    width: 30px;
+}
+
+.filter-dl dd {
+    margin-left: 50px;
+}
+
+.filter-dl a {
+    margin-right: 20px;
+}
+
+.filter-dl .label-blank {
+    color: #555;
+    font-weight: normal;
+    padding-top: 5px;
+}
+
+.filter-dl .label-primary {
+    padding-top: 5px;
+    font-weight: normal;
+}
+
+.filter-dl .label-blank:hover {
+    color: #000;
+}
+
+.filter-dl .label-cat {
+    color: #999;
+    font-weight: normal;
+}
+
+.filter-checkbox .label-primary, .filter-checkbox .label-blank {
+    padding-left: 20px;
+    position: relative;
+}
+
+.filter-checkbox .label-blank:before, .filter-checkbox .label-primary:before {
+    font-family: icomoon;
+    font-weight: normal;
+    font-style: normal;
+    display: block;
+    position: absolute;
+    left: 6px;
+    top: 7px;
+}
+
+.filter-checkbox .label-blank:before {
+    content: "\f096";
+    color: #888;
+}
+
+.filter-checkbox .label-primary:before {
+    content: "\f046";
+    color: #fff;
+}
+
+.filter-radio .label-primary, .filter-radio .label-blank {
+    padding-left: 20px;
+    position: relative;
+}
+
+.filter-radio .label-blank:before, .filter-radio .label-primary:before {
+    font-family: icomoon;
+    font-weight: normal;
+    font-style: normal;
+    display: block;
+    position: absolute;
+    left: 5px;
+    top: 6px;
+}
+
+.filter-radio .label-blank:before {
+    content: "\f10c";
+    color: #888;
+}
+
+.filter-radio .label-primary:before {
+    content: "\f058";
+    color: #fff;
+}
+
+.statics-panel {
+    padding-left: 20px;
+    border-left: 10px solid #eee;
+}
+
+.statics-panel .dl {
+    float: left;
+    text-align: center;
+    margin-right: 20px;
+}
+
+.statics-panel dt {
+    font-size: 22px;
+}
+
+.statics-panel dd {
+    font-size: 12px;
+}
+
+.verified {
+    color: #4cae4c;
+}
+
+.verified:before {
+    font-family: 'icomoon';
+    content: "\f00c";
+    margin-right: 3px;
+}
+
+.not-verified {
+    color: #aaa;
+}
+
+.multilevel-nav {
+    background-color: #eee;
+}
+
+.multilevel-nav .nav-pills > li > a {
+    -webkit-border-radius: 0px;
+    border-radius: 0px;
+}
+
+.multilevel-nav .nav > li > a:hover,
+.multilevel-nav .nav > li > a:focus {
+    background-color: #FFF;
+}
+
+.multilevel-nav .nav-pills > li.active > a {
+    background-color: #428bca;
+}
+
+.multilevel-nav .nav {
+    padding: 6px 0 0;
+}
+
+.multilevel-nav .nav:after {
+    content: "";
+    width: 100%;
+    background-image:-webkit-gradient(linear, left top, right top, color-stop(0, #fff), color-stop(0.5, #fff), color-stop(1, #fff));
+    height: 2px;
+    margin: 5px auto 0px;
+}
+
+.multilevel-nav .nav-title {
+    padding: 10px 0px 5px 15px;
+    display: inline-block;
+    color: #999;
+}
+
+.multilevel-nav .nav-title:after {
+    font-family: 'icomoon';
+    content: "\f0d7";
+    color: #ccc;
+    margin-left: 5px;
+}
+
+.multilevel-nav .sub-level {
+    padding: 10px 30px 10px 30px;
+}
+
+.wx-preview .wx-received .wx-bubble {
+    padding-right: 10px;
+
+}
+
+.wx-preview .wx-bubble {
+    font-size: 14px;
 }
