--- a/features/FinanceManagement/app/views/finance_management/customer_management/_add_new_customer.html.haml
+++ b/features/FinanceManagement/app/views/finance_management/customer_management/_add_new_customer.html.haml
@@ -5,13 +5,25 @@
         %button(type="button" class="close" data-dismiss="modal" aria-hidden="true") &times
         %h4(class="modal-title" id="myModalLabel") 添加新客户
       %div(class="modal-body")
-        -#= form_for :new_customer, :url => {:action => "add_new_customer"}, :http => {:method => "post"} do |f|
-        -#  %table
-        -#    %tr
-        -#      %td(algin="center")姓名
-        -#      %td(algin="center")手机
-        -#      %td(algin="center")邮箱
-        -#
-        -#  %div(class="modal-footer" )
-        -#    %input(type="submit" class="btn btn-primary btn-lg" value="保存")
-        -#    %input(type="button" class="btn btn-default btn-lg" data-dismiss="modal" value="取消" )
+        = form_for :new_customer, :url => {:action => "add_new_customer"}, :http => {:method => "post"} do |f|
+          %table.table.table-hover
+            %thead
+              %tr
+                %td(algin="center")姓名
+                %td(algin="center")电话
+                %td(algin="center")邮箱
+                %td(algin="center")初始资金
+            %tbody
+            %tr
+              %td
+                =f.text_field :name, class: "add_customer_info_input"
+              %td
+                =f.text_field :phone, class: "add_customer_info_input2"
+              %td
+                =f.text_field :email, class: "add_customer_info_input3"
+              %td
+                =f.text_field :original_funds, class: "add_customer_info_input4"
+
+          %div(class="modal-footer" )
+            %input(type="submit" class="btn btn-primary btn-lg" value="保存")
+            %input(type="button" class="btn btn-default btn-lg" data-dismiss="modal" value="取消" )
