--- a/features/FinanceStarUsers/app/views/finance_star_users/users/index.html.haml
+++ b/features/FinanceStarUsers/app/views/finance_star_users/users/index.html.haml
@@ -19,3 +19,5 @@
 %br
 
 = link_to 'New User', new_user_path
+
+=will_paginate @users , :previous_label => '上一页' , :next_label => '下一页', renderer: BootstrapPagination::Rails
