--- a/features/FinanceManagement/app/views/finance_management/customer_management/index.html.haml
+++ b/features/FinanceManagement/app/views/finance_management/customer_management/index.html.haml
@@ -5,7 +5,7 @@
 .row
   %div(class="col-md-8" )
     %div
-      %a(href="" class="btn btn-success btn-lg btn-default btn-default-alt" data-toggle="modal" data-target="#add_new_customer")
+      %a(href="" class="btn btn-lg btn-default btn-default-alt" data-toggle="modal" data-target="#add_new_customer")
         %i.icon-user-add
         新建客户
 
