--- a/features/FinanceManagement/app/views/finance_management/my_finance/_header.html.haml
+++ b/features/FinanceManagement/app/views/finance_management/my_finance/_header.html.haml
@@ -1,28 +1,28 @@
 .col-md-2
   .multilevel-nav
     %ul.nav.nav-pills.nav-stacked
-      %li#_subscribe_auto_reply
-        %a(href="subscribe_auto_reply")被关注自动回复
-    %ul.nav.nav-pills.nav-stacked
-      %li#_message_auto_reply
-        %a(href="message_auto_reply")留言信息自动回复
+      %li
+        %a(href="#")  XXXXXX
     %ul.nav.nav-pills.nav-stacked
       %li
-        %span.nav-title 客户认证
-      %li#_invitation_auto_reply
-        %a.sub-level(href="invitation_auto_reply")邀请认证回复
-      %li#_phone_auto_reply
-        %a.sub-level(href="phone_auto_reply")手机认证回复
+        %a(href="#")  XXXXXX
     %ul.nav.nav-pills.nav-stacked
-      %li#_service_auto_reply
-        %a(href="service_auto_reply")客服信息回复
+      %li
+        %span.nav-title  CC
+      %li
+        %a.sub-level(href="#")  XX
+      %li
+        %a.sub-level(href="#")  XX
     %ul.nav.nav-pills.nav-stacked
-      %li#_keyword_auto_reply
-        %a(href="keyword_auto_reply")关键词自动回复
-    -#%ul.nav.nav-pills.nav-stacked
-    -#  %li
-    -#    %span.nav-title 导航菜单
-    -#  %li
-    -#    %a.sub-level(href="#")  客服信息导航
-    -#  %li
-    -#    %a.sub-level(href="#") 关键词自动回复导航
+      %li
+        %a(href="#")  XXXXX
+    %ul.nav.nav-pills.nav-stacked
+      %li
+        %a(href="#")  XXXXX
+    %ul.nav.nav-pills.nav-stacked
+      %li
+        %span.nav-title  CC
+      %li
+        %a.sub-level(href="#")  XXXX
+      %li
+        %a.sub-level(href="#") XXXXX
