--- a/features/FinanceManagement/app/views/finance_management/my_finance/index.html.haml
+++ b/features/FinanceManagement/app/views/finance_management/my_finance/index.html.haml
@@ -20,23 +20,24 @@
                   %label.col-sm-2.control-label 用户
                   .col-sm-10
                     .btn-group
-                      %button.btn.btn-default(type="button") 全部
+                      %button.btn.btn-default(type="button") 请选择用户
                       %button.btn.btn-default.dropdown-toggle(type="button" data-toggle="dropdown")
                         %span.caret
                         %span.sr-only 下拉菜单
                       %ul.dropdown-menu(role="menu")
-                        %li
-                          %a()cc
-                        %li
-                          %a()kk
-                        %li
-                          %a()dev
+                        -if @customers.blank?
+                          %li
+                            %a() 暂时无用户
+                        -else
+                          -@customers.each do |customer|
+                            %li
+                              %a() #{customer.name}
 
                 .form-group
                   %label.col-sm-2.control-label 规则
                   .col-sm-10
                     .btn-group
-                      %button.btn.btn-default(type="button") 全部
+                      %button.btn.btn-default(type="button") 请选择消费
                       %button.btn.btn-default.dropdown-toggle(type="button" data-toggle="dropdown")
                         %span.caret
                         %span.sr-only 下拉菜单
@@ -46,17 +47,14 @@
                         %li
                           %a()支出
                     .btn-group
-                      %button.btn.btn-default(type="button") 全部
+                      %button.btn.btn-default(type="button") 请选择消费类型
                       %button.btn.btn-default.dropdown-toggle(type="button" data-toggle="dropdown")
                         %span.caret
                         %span.sr-only 下拉菜单
                       %ul.dropdown-menu(role="menu")
-                        %li
-                          %a()公司福利
-                        %li
-                          %a()日常消费
-                        %li
-                          %a()工资
+                        -@customer_consume.each do |customer_consume|
+                          %li
+                            %a() #{customer_consume.consume_type}
 
                 .form-group
                   %label.col-sm-2.control-label 消费
@@ -73,8 +71,8 @@
               %a.btn.btn-default(href = "") 取消
               %a.btn.btn-primary(onclick="save_consume_table()" ) 添加
 
-          -if @consume.present?
-            -@consume.each do |consume|
+          -if @my_finance.present?
+            -@my_finance.each do |my_finance|
               .panel.panel-default
                 .panel-heading
                   cc 消费记录时间：2013年12月21日
@@ -91,21 +89,21 @@
                       %label.col-sm-2.control-label 规则
                       .col-sm-10
                         .btn-group
-                          %button.btn.btn-default(type="button") #{consume.consume}
+                          %button.btn.btn-default(type="button") #{my_finance.consume}
 
                         .btn-group
-                          %button.btn.btn-default(type="button") #{consume.consume_type}
+                          %button.btn.btn-default(type="button") #{my_finance.consume_type}
 
                     .form-group
                       %label.col-sm-2.control-label 消费
                       .col-sm-10
                         .btn-group
-                          %button.btn.btn-default(type="button") 100元
+                          %button.btn.btn-default(type="button") #{my_finance.consume_value}元
 
                     .form-group
                       %label.col-sm-2.control-label 描述
                       .col-sm-10
-                        %textarea.form-control(rows="1") 公司聚餐 消费了100元 哈哈哈哈哈哈哈哈
+                        %textarea.form-control(rows="1") #{my_finance.consume_describe}
 
 
                 .panel-footer.text-right
@@ -131,18 +129,75 @@
                   %td
                   %td
               %tbody
-                -@consume.each do |customer|
+                -@customer_consume.each do |customer_consume|
                   %tr
                     %td
-                      = customer.consume
+                      = customer_consume.consume
                     %td
-                      = customer.consume_type
+                      = customer_consume.consume_type
                     %td
-                      %a(href="" class="btn btn-xs btn-primary" data-toggle="modal" data-target="#edit_customer#{customer.id}")
+                      %a(href="" class="btn btn-xs btn-primary" data-toggle="modal" data-target="#edit_customer_consume#{customer_consume.id}")
                         %i.icon-pencil
                           编辑
-                      %a(href="" class="btn btn-xs btn-danger" data-toggle="modal" data-target="#delete_customer#{customer.id}")
+                      %a(href="" class="btn btn-xs btn-danger" data-toggle="modal" data-target="#delete_customer_consume#{customer_consume.id}")
                         %i.icon-remove
                           删除
 
+
+
+                      %div(class="modal fade" id="edit_customer_consume#{customer_consume.id}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true")
+                        %div(class="modal-dialog")
+                          %div(class="modal-content")
+                            %div(class="modal-header")
+                              %button(type="button" class="close" data-dismiss="modal" aria-hidden="true") &times
+                              %h4(class="modal-title" id="myModalLabel") 编辑消费类型
+                            %div(class="modal-body")
+                              = form_for :edit_customer_consume, :url => {:action => "edit_customer_consume"}, :http => {:method => "post"} do |f|
+                                %table.table.table-hover
+                                  %thead
+                                    %tr
+                                      %td(algin="center")编号
+                                      %td(algin="center")消费
+                                      %td(algin="center")消费类型
+                                  %tbody
+                                    %tr
+                                      %td
+                                        =f.text_field :consume_id, class: "edit_customer_consume_info_input",  readonly: "readonly", value: customer_consume.id
+                                      %td
+                                        =f.text_field :consume, class: "edit_customer_consume_info_input", readonly: "readonly", value: customer_consume.consume
+                                      %td
+                                        =f.text_field :consume_type, class: "edit_customer_consume_info_input", value: customer_consume.consume_type
+
+                                %div(class="modal-footer" )
+                                  %input(type="submit" class="btn btn-primary btn-lg" value="保存")
+                                  %input(type="button" class="btn btn-default btn-lg" data-dismiss="modal" value="取消" )
+
+
+
+                      %div(class="modal fade" id="delete_customer_consume#{customer_consume.id}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true")
+                        %div(class="modal-dialog")
+                          %div(class="modal-content")
+                            %div(class="modal-header")
+                              %button(type="button" class="close" data-dismiss="modal" aria-hidden="true") &times
+                              %h4(class="modal-title" id="myModalLabel") 是否删除此消费定义
+                            %div(class="modal-body")
+                              %table.table.table-hover
+                                %thead
+                                  %tr
+                                    %td(algin="center")消费
+                                    %td(algin="center")消费类型
+
+                                %tbody
+                                  %tr
+                                    %td= customer_consume.consume
+                                    %td= customer_consume.consume_type
+
+                              %div(class="modal-footer" )
+                                =link_to "删除" , {:controller => "my_finance", :action => "delete_customer_consume",:id=>"#{customer_consume.id}"},:method => :post , :class=>"btn btn-danger btn-lg"
+                                %input(type="button" class="btn btn-default btn-lg" data-dismiss="modal" value="取消" )
+
 =render "add_new_finance_type"
+
+=will_paginate @customer_consume , :previous_label => '上一页' , :next_label => '下一页', renderer: BootstrapPagination::Rails
+=will_paginate @my_finance , :previous_label => '上一页' , :next_label => '下一页', renderer: BootstrapPagination::Rails
+
