--- a/features/FinanceManagement/app/views/finance_management/my_finance/index.html.haml
+++ b/features/FinanceManagement/app/views/finance_management/my_finance/index.html.haml
@@ -20,52 +20,49 @@
                   %label.col-sm-2.control-label 用户
                   .col-sm-10
                     .btn-group
-                      %button.btn.btn-default(type="button") 请选择用户
+                      %button#select_customer.btn.btn-default(type="button") 请选择用户
                       %button.btn.btn-default.dropdown-toggle(type="button" data-toggle="dropdown")
                         %span.caret
                         %span.sr-only 下拉菜单
                       %ul.dropdown-menu(role="menu")
                         -if @customers.blank?
                           %li
-                            %a() 暂时无用户
+                            %a() 暂无用户
                         -else
                           -@customers.each do |customer|
                             %li
-                              %a() #{customer.name}
+                              %a(onclick = "exchange_customer_name('#{customer.name}')")
+                                #{customer.name}
 
                 .form-group
                   %label.col-sm-2.control-label 规则
                   .col-sm-10
                     .btn-group
-                      %button.btn.btn-default(type="button") 请选择消费
+                      %button#select_customer_consume.btn.btn-default(type="button") 请选择消费类型
                       %button.btn.btn-default.dropdown-toggle(type="button" data-toggle="dropdown")
                         %span.caret
                         %span.sr-only 下拉菜单
                       %ul.dropdown-menu(role="menu")
-                        %li
-                          %a()收入
-                        %li
-                          %a()支出
-                    .btn-group
-                      %button.btn.btn-default(type="button") 请选择消费类型
-                      %button.btn.btn-default.dropdown-toggle(type="button" data-toggle="dropdown")
-                        %span.caret
-                        %span.sr-only 下拉菜单
-                      %ul.dropdown-menu(role="menu")
-                        -@customer_consume.each do |customer_consume|
+                        -if @customer_consume.blank?
                           %li
-                            %a() #{customer_consume.consume_type}
+                            %a() 暂无消费类型
+                        -else
+                          -@customer_consume.each do |customer_consume|
+                            %li
+                              %a(onclick = "exchange_customer_consume('#{customer_consume.consume}','#{customer_consume.consume_type}')")
+                                #{customer_consume.consume}/#{customer_consume.consume_type}
+
 
                 .form-group
                   %label.col-sm-2.control-label 消费
                   .col-sm-10
-                    %input(type="number" name="number" id="number" min="0" value="0")
+                    %input#customer_consume_value(value="0")
                     &nbsp&nbsp元
 
                 .form-group
                   %label.col-sm-2.control-label 描述
                   .col-sm-10
-                    %textarea.form-control(rows="1") 公司聚餐 消费了100元 哈哈哈哈哈哈哈哈
+                    %textarea#customer_consume_describe.form-control(rows="1") 公司聚餐 消费了100元 哈哈哈哈哈哈哈哈
 
             .panel-footer.text-right
               %a.btn.btn-default(href = "") 取消
