--- a/features/FinanceManagement/app/views/finance_management/my_finance/customer_income_detail.html.haml
+++ b/features/FinanceManagement/app/views/finance_management/my_finance/customer_income_detail.html.haml
@@ -5,8 +5,7 @@
     .col-md-10
       .row
         .col-md-8
-          =render "all_content"
-
+          =render "customer_income_content"
         .col-md-4
           =render "consume_type_management"
 
