--- a/features/FinanceManagement/app/views/finance_management/my_finance/_add_new_finance_type.html.haml
+++ b/features/FinanceManagement/app/views/finance_management/my_finance/_add_new_finance_type.html.haml
@@ -12,7 +12,7 @@
                 %td
                   收入类型:
                 %td
-                  =f.text_field :income_type, class: "add_new_income_input"
+                  =f.text_field :income_type, class: "add_new_income_input form-control"
 
           %div(class="modal-footer" )
             %input(type="submit" class="btn btn-primary btn-lg" value="添加")
@@ -33,7 +33,7 @@
                 %td
                   支出类型：
                 %td
-                  =f.text_field :expenses_type, class: "add_new_expenses_input"
+                  =f.text_field :expenses_type, class: "add_new_expenses_input form-control"
 
           %div(class="modal-footer" )
             %input(type="submit" class="btn btn-primary btn-lg" value="添加")
