--- a/features/FinanceManagement/app/views/finance_management/my_finance/_all_content.html.haml
+++ b/features/FinanceManagement/app/views/finance_management/my_finance/_all_content.html.haml
@@ -49,8 +49,7 @@
       .form-group
         %label.col-sm-2.control-label 消费
         .col-sm-10
-          %input#customer_consume_value(value="0")
-          &nbsp&nbsp元
+          %input#customer_consume_value.form-control(value="0")
 
       .form-group
         %label.col-sm-2.control-label 描述
