--- a/features/FinanceManagement/app/views/finance_management/customer_management/_add_new_customer.html.haml
+++ b/features/FinanceManagement/app/views/finance_management/customer_management/_add_new_customer.html.haml
@@ -16,13 +16,13 @@
             %tbody
             %tr
               %td
-                =f.text_field :name, class: "add_customer_info_input"
+                =f.text_field :name, class: "add_customer_info_input form-control"
               %td
-                =f.text_field :phone, class: "add_customer_info_input2"
+                =f.text_field :phone, class: "add_customer_info_input2 form-control"
               %td
-                =f.text_field :email, class: "add_customer_info_input3"
+                =f.text_field :email, class: "add_customer_info_input3 form-control"
               %td
-                =f.text_field :original_funds, class: "add_customer_info_input4"
+                =f.text_field :original_funds, class: "add_customer_info_input4 form-control"
 
           %div(class="modal-footer" )
             %input(type="submit" class="btn btn-primary btn-lg" value="保存")
