--- a/features/FinanceStarUsers/app/views/finance_star_users/register/_form.html.haml
+++ b/features/FinanceStarUsers/app/views/finance_star_users/register/_form.html.haml
@@ -1,22 +1,27 @@
-= form_for @user, :url => signup_path do |f|
-  - if @user.errors.any?
-    #error_explanation
-      %h3= "注册时发生了#{@user.errors.count}个错误:"
-      %ul
-        - @user.errors.full_messages.each do |msg|
-          %li= msg
+.auth-form
+  = form_for @user, :url => signup_path, :html => { :class => "form-horizontal" } do |f|
+    - if @user.errors.any?
+      #error_explanation
+        %h3= "注册时发生了#{@user.errors.count}个错误:"
+        %ul
+          - @user.errors.full_messages.each do |msg|
+            %li= msg
 
-  .field
-    = f.label :name, "姓名"
-    = f.text_field :name
-  .field
-    = f.label :phone, "电话"
-    = f.telephone_field :phone
-  .field
-    = f.label :email, "邮箱"
-    = f.email_field :email
-  .field
-    = f.label :password, "密码"
-    = f.password_field :password, :value => @user.password
-  .actions
-    = f.submit 'Save'
+
+    .auth-form-header
+      %label 注册
+    .auth-form-body
+      .field
+        = f.label :name, "姓名"
+        = f.text_field :name
+      .field
+        = f.label :phone, "电话"
+        = f.telephone_field :phone ,class:"auth-form-input"
+      .field
+        = f.label :email, "邮箱"
+        = f.email_field :email ,class:"auth-form-input"
+      .field
+        = f.label :password, "密码"
+        = f.password_field :password, :value => @user.password
+      .actions
+        = f.submit 'Save'
