add index content to FinanceStar

--- a/features/FinanceManagement/app/views/finance_management/home_page/index.html.haml
+++ b/features/FinanceManagement/app/views/finance_management/home_page/index.html.haml
@@ -1,12 +1,13 @@
 .container
   .row
-    -#%div(class="col-md-8" )
-    -#  %div(class="dl" )
-    -#    -if @customer.present?
-    -#      -@customer.each do |customer|
-    -#        %dt
-    -#          %span 客户#{customer.name}:
-    -#          %span
-    -#            .progress
-    -#              .progress-bar(process = "#{customer.original_funds.to_f/@original_funds_total}")
-    -#              %span.sr-only 起始资金:#{customer.original_funds}元
+    %div(class="col-md-8" )
+      %div(class="dl" )
+        -if @customer.present?
+          -@customer.each do |customer|
+            %dt
+              %span 客户#{customer.name}:
+              %span
+                .progress
+                  .progress-bar(process = "#{customer.original_funds.to_f/@original_funds_total}")
+                    %div 起始资金:#{customer.original_funds}元
+                  %span.sr-only 起始资金
