--- a/features/FinanceManagement/app/views/finance_management/customer_management/index.html.haml
+++ b/features/FinanceManagement/app/views/finance_management/customer_management/index.html.haml
@@ -6,14 +6,11 @@
           %button(type="button" class="close" data-dismiss="alert" aria-hidden="true" ) &times;
           %p
             %strong 新建用户成功
-          %p
-            %span(id='close_tip_send_sms_success') 5
-            %span 秒后自动消失
       -else
         %div(class="alert alert-dismissable alert-danger"  id='tip_send_sms_false' )
           %button(type="button" class="close" data-dismiss="alert" aria-hidden="true" ) &times;
           %p
-            %strong 您的短信息没有发送成功，原因可能是短信条数不足
+            %strong 新建用户失败
 
 
     %div(class="col-md-8" )
